--- a/Trab1_Igor_Dummer.ipynb
+++ b/Trab1_Igor_Dummer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8277626a",
+   "id": "1e0b6afa",
    "metadata": {},
    "source": [
     "# Configurações"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "907ef957",
+   "id": "aaf382ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,20 +19,21 @@
     "import pandas as pd\n",
     "from scipy import stats\n",
     "from sklearn import datasets\n",
-    "from sklearn.model_selection import cross_val_predict, RepeatedStratifiedKFold, StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score, RepeatedStratifiedKFold, StratifiedKFold\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "495042a4",
+   "execution_count": 15,
+   "id": "89f474f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_splits = 10\n",
     "n_repeats = 3\n",
+    "n_estimators = [4,9,15,21]\n",
     "\n",
     "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)\n",
     "skf = StratifiedKFold(n_splits=4)"
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25002a9",
+   "id": "2b4f5cfe",
    "metadata": {},
    "source": [
     "### Load dataset"
@@ -49,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2fc07ebe",
+   "id": "9ca0a351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8366d47",
+   "id": "e01805be",
    "metadata": {},
    "source": [
     "Como minha matrícula é terminada em 9, utilizarei 7 descritores de Hu e 6 descritores de Haralick."
@@ -67,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "14bb2138",
+   "id": "05bd24e7",
    "metadata": {
     "scrolled": true
    },
@@ -181,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9749b812",
+   "id": "d128d06e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "067b955b",
+   "id": "a93559a0",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4f526deb",
+   "id": "73fdad3f",
    "metadata": {
     "scrolled": false
    },
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "41e19a1f",
+   "id": "279c84ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdef2261",
+   "id": "56f6cd8f",
    "metadata": {},
    "source": [
     "### ZERO R"
@@ -383,20 +384,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f7b12b0c",
+   "execution_count": 20,
+   "id": "f69bd690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classification_report(scores):\n",
+    "    from scipy import stats\n",
+    "    import numpy as np\n",
+    "    print(f'Media: {scores.mean():.2f}, Desvio Padrao: {scores.std():.2f}')\n",
+    "    inf, sup = stats.norm.interval(0.95, loc=scores.mean(), \n",
+    "                               scale=scores.std()/np.sqrt(len(scores)))\n",
+    "    print(f'Intervalo de confiança (95%): [{inf:.2f},{sup:.2f}]')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e54edf97",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cross_val_predict only works for partitions",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdummy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DummyClassifier\n\u001b[0;32m      3\u001b[0m zR \u001b[38;5;241m=\u001b[39m DummyClassifier()\n\u001b[1;32m----> 5\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[43mcross_val_predict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mzR\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdts_x\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdts_y\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcv\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrkf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m conf_mat \u001b[38;5;241m=\u001b[39m confusion_matrix(dts_y, y_pred)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(conf_mat)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:964\u001b[0m, in \u001b[0;36mcross_val_predict\u001b[1;34m(estimator, X, y, groups, cv, n_jobs, verbose, fit_params, pre_dispatch, method)\u001b[0m\n\u001b[0;32m    962\u001b[0m test_indices \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate([test \u001b[38;5;28;01mfor\u001b[39;00m _, test \u001b[38;5;129;01min\u001b[39;00m splits])\n\u001b[0;32m    963\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m _check_is_permutation(test_indices, _num_samples(X)):\n\u001b[1;32m--> 964\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcross_val_predict only works for partitions\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    966\u001b[0m \u001b[38;5;66;03m# If classification methods produce multiple columns of output,\u001b[39;00m\n\u001b[0;32m    967\u001b[0m \u001b[38;5;66;03m# we need to manually encode classes to ensure consistent column ordering.\u001b[39;00m\n\u001b[0;32m    968\u001b[0m encode \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m    969\u001b[0m     method \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdecision_function\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict_proba\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict_log_proba\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m    970\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    971\u001b[0m )\n",
-      "\u001b[1;31mValueError\u001b[0m: cross_val_predict only works for partitions"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.17, Desvio Padrao: 0.01\n",
+      "Intervalo de confiança (95%): [0.16,0.17]\n"
      ]
     }
    ],
@@ -405,10 +418,135 @@
     "\n",
     "zR = DummyClassifier()\n",
     "\n",
-    "y_pred = cross_val_predict(zR, dts_x, dts_y, cv=rkf)\n",
-    "conf_mat = confusion_matrix(dts_y, y_pred)\n",
+    "scores1 = cross_val_score(zR, dts_x, dts_y, cv = rkf)\n",
     "\n",
-    "print(conf_mat)"
+    "classification_report(scores1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "027a4b5e",
+   "metadata": {},
+   "source": [
+    "### Bagging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e65be869",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.47, Desvio Padrao: 0.08\n",
+      "Intervalo de confiança (95%): [0.44,0.50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "parameters = {'bagging__n_estimators':n_estimators}\n",
+    "\n",
+    "bg = BaggingClassifier(estimator=GaussianNB(), random_state=11)\n",
+    "\n",
+    "pipe = Pipeline([('scaler', StandardScaler()), ('bagging', bg)])\n",
+    "\n",
+    "clf = GridSearchCV(pipe, parameters,cv=4)\n",
+    "\n",
+    "scores2 = cross_val_score(clf, dts_x, dts_y, cv = rkf)\n",
+    "\n",
+    "classification_report(scores2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70389146",
+   "metadata": {},
+   "source": [
+    "### AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2e94ac23",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.39, Desvio Padrao: 0.08\n",
+      "Intervalo de confiança (95%): [0.36,0.42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "parameters = {'boosting__n_estimators':n_estimators}\n",
+    "\n",
+    "adb = AdaBoostClassifier(estimator=GaussianNB(), random_state=11)\n",
+    "\n",
+    "pipe = Pipeline([('scaler', StandardScaler()), ('boosting',adb)])\n",
+    "\n",
+    "clf = GridSearchCV(pipe, parameters,cv=4)\n",
+    "\n",
+    "scores3 = cross_val_score(clf, dts_x, dts_y, cv = rkf)\n",
+    "\n",
+    "classification_report(scores3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca3aa9dc",
+   "metadata": {},
+   "source": [
+    "### RandomFlorest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b216c2b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.65, Desvio Padrao: 0.07\n",
+      "Intervalo de confiança (95%): [0.63,0.68]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scalar = StandardScaler()\n",
+    "\n",
+    "rF = RandomForestClassifier()\n",
+    "\n",
+    "pipeline = Pipeline([('transformer', scalar), ('estimator', rF)])\n",
+    "\n",
+    "grade={'estimator__n_estimators':n_estimators}\n",
+    "\n",
+    "gs = GridSearchCV(estimator=pipeline, param_grid = grade, cv = 4)\n",
+    "\n",
+    "scores3 = cross_val_score(gs, dts_x, dts_y, cv = rkf)\n",
+    "\n",
+    "classification_report(scores3)"
    ]
   }
  ],
