--- a/Trab1_Igor_Dummer.ipynb
+++ b/Trab1_Igor_Dummer.ipynb
@@ -609,7 +609,16 @@
    "execution_count": 15,
    "id": "b216c2b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.62, Desvio Padrao: 0.07\n",
+      "Intervalo de confiança (95%): [0.60,0.65]\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
