--- a/Trab1_Igor_Dummer.ipynb
+++ b/Trab1_Igor_Dummer.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1e0b6afa",
    "metadata": {},
@@ -11,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "aaf382ac",
    "metadata": {},
    "outputs": [],
@@ -27,20 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "89f474f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_splits = 10\n",
     "n_repeats = 3\n",
-    "n_estimators = [3,9,15,21]\n",
-    "\n",
-    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)"
+    "n_estimators = [3,9,15,21]"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2b4f5cfe",
    "metadata": {},
@@ -50,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9ca0a351",
    "metadata": {},
    "outputs": [],
@@ -59,7 +55,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e01805be",
    "metadata": {},
@@ -69,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "05bd24e7",
    "metadata": {
     "scrolled": true
@@ -205,7 +200,7 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,12 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d128d06e",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.set_index('id',inplace=True) #Transformando a coluna id no indice da tabela\n",
+    "\n",
+    "df[ALL] = df[ALL].apply(lambda x: x.str.replace(',', '.').astype(float), axis=1)\n",
     "\n",
     "#Observem que a classe esta separada em duas colunas então devemos concatenadas para formar uma coluna só chamada classe\n",
     "df['classe'] = df['tipo_lampada'].str.replace(\" \", \"\") + df['potencia'].astype(str) "
@@ -235,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a93559a0",
    "metadata": {},
    "outputs": [
@@ -257,7 +254,7 @@
        "Name: classe, Length: 297, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,19 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "73fdad3f",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64'), dtype('float64')]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -427,76 +417,63 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''\n",
-    "Os dados dos descritores como podemos observar na tabela acima estão com \",\"\n",
-    "porém o padrão para ponto flutuante (float) em python é \".\" logo a biblioteca \n",
-    "entendeu que se tratavam de strings (objects para o pandas) e não de floats \n",
-    "assim é importante transformar esses dados para float.\n",
-    "'''\n",
-    "df[ALL] = df[ALL].apply(lambda x: x.str.replace(',', '.').astype(float), axis=1)\n",
-    "print(list(df[ALL].dtypes))\n",
     "df[ALL].head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "279c84ae",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# dts_x = df[ALL]\n",
-    "dts_y = df['classe']\n",
-    " \n",
-    "# Aplicando a normalização ao conjundo de dados\n",
-    "dts_x = StandardScaler().fit_transform(df[ALL])"
+    "\n",
+    "X = df[ALL]\n",
+    "y = df['classe']\n"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e16e6c20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classification_report(scores):\n",
+    "    print(f'Media: {scores.mean():.8f}, Desvio Padrao: {scores.std():.8f}')\n",
+    "    inf, sup = stats.norm.interval(0.95, loc=scores.mean(), \n",
+    "                               scale=scores.std()/np.sqrt(len(scores)))\n",
+    "    print(f'Intervalo de confiança (95%): [{inf:.8f},{sup:.8f}]')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "56f6cd8f",
    "metadata": {},
    "source": [
-    "### ZERO R"
+    "## ZeroR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f69bd690",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def classification_report(scores):\n",
-    "    from scipy import stats\n",
-    "    import numpy as np\n",
-    "    print(f'Media: {scores.mean():.2f}, Desvio Padrao: {scores.std():.2f}')\n",
-    "    inf, sup = stats.norm.interval(0.95, loc=scores.mean(), \n",
-    "                               scale=scores.std()/np.sqrt(len(scores)))\n",
-    "    print(f'Intervalo de confiança (95%): [{inf:.2f},{sup:.2f}]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e54edf97",
+   "id": "a415f3f8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.17, Desvio Padrao: 0.01\n",
-      "Intervalo de confiança (95%): [0.16,0.17]\n"
+      "Media: 0.16505747, Desvio Padrao: 0.01088258\n",
+      "Intervalo de confiança (95%): [0.16116326,0.16895168]\n"
      ]
     }
    ],
@@ -505,13 +482,14 @@
     "\n",
     "zR = DummyClassifier()\n",
     "\n",
-    "scores1 = cross_val_score(zR, dts_x, dts_y, cv = rkf)\n",
+    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)\n",
     "\n",
-    "classification_report(scores1)"
+    "scoresZR = cross_val_score(zR, X, y, cv = rkf)\n",
+    "\n",
+    "classification_report(scoresZR)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "027a4b5e",
    "metadata": {},
@@ -521,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "e65be869",
    "metadata": {},
    "outputs": [
@@ -529,8 +507,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.64, Desvio Padrao: 0.07\n",
-      "Intervalo de confiança (95%): [0.61,0.66]\n"
+      "Media: 0.63563218, Desvio Padrao: 0.07451964\n",
+      "Intervalo de confiança (95%): [0.60896616,0.66229821]\n"
      ]
     }
    ],
@@ -548,13 +526,14 @@
     "\n",
     "clf = GridSearchCV(pipe, parameters, cv=4)\n",
     "\n",
-    "scores2 = cross_val_score(clf, dts_x, dts_y, cv = rkf)\n",
+    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)\n",
     "\n",
-    "classification_report(scores2)"
+    "scoresBA = cross_val_score(clf, X, y, cv = rkf)\n",
+    "\n",
+    "classification_report(scoresBA)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "70389146",
    "metadata": {},
@@ -564,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "2e94ac23",
    "metadata": {
     "scrolled": true
@@ -574,8 +553,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.34, Desvio Padrao: 0.03\n",
-      "Intervalo de confiança (95%): [0.33,0.35]\n"
+      "Media: 0.33904215, Desvio Padrao: 0.02916987\n",
+      "Intervalo de confiança (95%): [0.32860403,0.34948026]\n"
      ]
     }
    ],
@@ -590,23 +569,24 @@
     "\n",
     "clf = GridSearchCV(pipe, parameters,cv=4)\n",
     "\n",
-    "scores3 = cross_val_score(clf, dts_x, dts_y, cv = rkf)\n",
+    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)\n",
     "\n",
-    "classification_report(scores3)"
+    "scoresAB = cross_val_score(clf, X, y, cv = rkf)\n",
+    "\n",
+    "classification_report(scoresAB)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ca3aa9dc",
    "metadata": {},
    "source": [
-    "### RandomForest"
+    "### Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "b216c2b0",
    "metadata": {},
    "outputs": [
@@ -614,8 +594,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.62, Desvio Padrao: 0.07\n",
-      "Intervalo de confiança (95%): [0.60,0.65]\n"
+      "Media: 0.62314176, Desvio Padrao: 0.07457384\n",
+      "Intervalo de confiança (95%): [0.59645635,0.64982718]\n"
      ]
     }
    ],
@@ -631,9 +611,247 @@
     "\n",
     "gs = GridSearchCV(pipeline, parameters, cv=4)\n",
     "\n",
-    "scores3 = cross_val_score(gs, dts_x, dts_y, cv=rkf)\n",
+    "rkf = RepeatedStratifiedKFold(n_splits = n_splits, n_repeats = n_repeats, random_state = 36851234)\n",
     "\n",
-    "classification_report(scores3)"
+    "scoresRF = cross_val_score(gs, X, y, cv=rkf)\n",
+    "\n",
+    "classification_report(scoresRF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5521f80",
+   "metadata": {},
+   "source": [
+    "### Heterogeneus Pooling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "029bfc4a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#Heterogeneous Pooling\n",
+    "from collections import Counter\n",
+    "from sklearn.utils import resample\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.base import BaseEstimator, ClassifierMixin\n",
+    "\n",
+    "\n",
+    "class HeterogeneousPooling(BaseEstimator, ClassifierMixin):\n",
+    "    def __init__(self, n_samples=1):\n",
+    "        self.n_samples = n_samples\n",
+    "        self.classifiers = []\n",
+    "        self.base_classifiers = [DecisionTreeClassifier(),\n",
+    "                                 GaussianNB(),\n",
+    "                                 KNeighborsClassifier()]\n",
+    "\n",
+    "    def fit(self, X, y):\n",
+    "        self.classes_ = sorted(set(y), key=lambda x: y.tolist().count(x), reverse=True)\n",
+    "        \n",
+    "        random_state = 0\n",
+    "        for i in range(self.n_samples):\n",
+    "            if i == 0:\n",
+    "                # Treina a partir da original\n",
+    "                X_train, y_train = X, y\n",
+    "            else:\n",
+    "                # Cria uma base de treino resample a partir da original\n",
+    "                random_state += 1\n",
+    "                X_train, y_train = resample(X, y, replace=True, random_state=random_state)\n",
+    "\n",
+    "             # Treina os classificadores base e os adiciona ao HeterogeneousPooling\n",
+    "            for classifier in self.base_classifiers:\n",
+    "                clf = classifier.fit(X_train, y_train)\n",
+    "                self.classifiers.append(clf)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        #As previsões de cada classificador são adicionadas à lista predictions\n",
+    "        predictions = []\n",
+    "        #iteramos sobre cada classificador armazenado em self.classifiers e realizamos\n",
+    "        #a previsão para o conjunto de dados de teste X\n",
+    "        for classifier in self.classifiers:\n",
+    "            predictions.append(classifier.predict(X))\n",
+    "\n",
+    "        #final_predictions para armazenar as previsões finais\n",
+    "        final_predictions = []\n",
+    "        for i in range(len(X)):\n",
+    "            votes = [predictions[j][i] for j in range(len(self.classifiers))]\n",
+    "            #contamos o número de votos para cada classe usando o Counter\n",
+    "            vote_count = Counter(votes)\n",
+    "            #Encontramos o valor máximo de votos com max_vote\n",
+    "            max_vote = max(vote_count.values())\n",
+    "\n",
+    "            #buscamos a classe mais frequente entre as que receberam o número máximo de votos.\n",
+    "            most_frequent_class = None\n",
+    "            for cls, count in vote_count.items():\n",
+    "                if count == max_vote:\n",
+    "                    if most_frequent_class is None:\n",
+    "                        most_frequent_class = cls\n",
+    "                    elif self.classes_.index(cls) < self.classes_.index(most_frequent_class):\n",
+    "                        most_frequent_class = cls\n",
+    "            #adicionamos a classe mais votada most_frequent_class à lista final_predictions\n",
+    "            #e continuamos iterando até processar todos os exemplos de teste.\n",
+    "            final_predictions.append(most_frequent_class)\n",
+    "\n",
+    "        #Por fim, retornamos a lista final_predictions, que contém as previsões finais\n",
+    "        #para o conjunto de dados de teste.\n",
+    "        return final_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8e80a154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.58482759, Desvio Padrao: 0.10235024\n",
+      "Intervalo de confiança (95%): [0.54820270,0.62145248]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.63333333, 0.3       , 0.5       , 0.6       , 0.56666667,\n",
+       "       0.53333333, 0.6       , 0.62068966, 0.51724138, 0.75862069,\n",
+       "       0.53333333, 0.43333333, 0.56666667, 0.56666667, 0.53333333,\n",
+       "       0.8       , 0.63333333, 0.5862069 , 0.62068966, 0.55172414,\n",
+       "       0.66666667, 0.73333333, 0.56666667, 0.76666667, 0.63333333,\n",
+       "       0.43333333, 0.6       , 0.48275862, 0.65517241, 0.55172414])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Definição dos parâmetros para a busca em grade\n",
+    "parameters = {'heterogeneous__n_samples': [1, 3, 5, 7]}\n",
+    "\n",
+    "# Instanciação do HeterogeneousPooling\n",
+    "hp = HeterogeneousPooling()\n",
+    "\n",
+    "# Criação do pipeline com o HeterogeneousPooling e padronização\n",
+    "pipe = Pipeline([('scaler', StandardScaler()), ('heterogeneous', hp)])\n",
+    "\n",
+    "# Instanciação do GridSearchCV com o pipeline e os parâmetros\n",
+    "clf = GridSearchCV(pipe, parameters, cv=4)\n",
+    "\n",
+    "# Definição do esquema de validação cruzada estratificada\n",
+    "rkf = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=36851234)\n",
+    "\n",
+    "# Avaliação do modelo usando o cross_val_score\n",
+    "HP_scores = cross_val_score(clf, X, y, cv=rkf)\n",
+    "\n",
+    "classification_report(HP_scores)\n",
+    "HP_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7f14da6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator\n",
+    "from sklearn.utils import resample\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.utils import check_random_state\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score, RepeatedStratifiedKFold\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "class HeterogeneousPooling(BaseEstimator, ClassifierMixin):\n",
+    "    def __init__(self, n_samples=1):\n",
+    "        self.n_samples = n_samples\n",
+    "        self.classifiers = []\n",
+    "        \n",
+    "    def fit(self, X, y):\n",
+    "        self.classes_ = sorted(set(y), key=lambda x: y.tolist().count(x), reverse=True)\n",
+    "        random_state = 0\n",
+    "        \n",
+    "        dt = DecisionTreeClassifier()\n",
+    "        nb = GaussianNB()\n",
+    "        knn = KNeighborsClassifier()\n",
+    "        \n",
+    "        for i in range(self.n_samples):\n",
+    "            if i == 0:\n",
+    "                X_train = X\n",
+    "                y_train = y\n",
+    "            else:\n",
+    "                random_state += 1\n",
+    "                X_train, y_train = resample(X, y, replace=True, random_state=random_state)\n",
+    "\n",
+    "            clf_dt = dt.fit(X_train, y_train)\n",
+    "            clf_nb = nb.fit(X_train, y_train)\n",
+    "            clf_knn = knn.fit(X_train, y_train)\n",
+    "            \n",
+    "            self.classifiers.append(clf_dt)\n",
+    "            self.classifiers.append(clf_nb)\n",
+    "            self.classifiers.append(clf_knn)\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        predictions = [classifier.predict(X) for classifier in self.classifiers]\n",
+    "\n",
+    "        final_predictions = []\n",
+    "        for i in range(len(X)):\n",
+    "            votes = [prediction[i] for prediction in predictions]\n",
+    "\n",
+    "            vote_count = Counter(votes)\n",
+    "            max_vote = max(vote_count.values())\n",
+    "\n",
+    "            most_frequent_class = None\n",
+    "            for cls, count in vote_count.items():\n",
+    "                if count == max_vote:\n",
+    "                    if most_frequent_class is None:\n",
+    "                        most_frequent_class = cls\n",
+    "                    elif self.classes_.index(cls) < self.classes_.index(most_frequent_class):\n",
+    "                        most_frequent_class = cls\n",
+    "\n",
+    "            final_predictions.append(most_frequent_class)\n",
+    "\n",
+    "        return final_predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79588e0b",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "parameters = {'heterogeneous__n_samples': [1, 3, 5, 7]}\n",
+    "\n",
+    "hp = HeterogeneousPooling()\n",
+    "\n",
+    "pipe = Pipeline([('scaler', StandardScaler()), ('heterogeneous', hp)])\n",
+    "\n",
+    "clf = GridSearchCV(pipe, parameters, cv=4)\n",
+    "\n",
+    "rkf = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=36851234)\n",
+    "\n",
+    "HP_scores = cross_val_score(clf, X, y, cv=rkf)\n",
+    "classification_report(HP_scores)\n",
+    "HP_scores"
    ]
   }
  ],
