--- a/Trab1_Igor_Dummer.ipynb
+++ b/Trab1_Igor_Dummer.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "029bfc4a",
    "metadata": {
     "scrolled": true
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "8e80a154",
    "metadata": {},
    "outputs": [
@@ -714,22 +714,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media: 0.58482759, Desvio Padrao: 0.10235024\n",
-      "Intervalo de confiança (95%): [0.54820270,0.62145248]\n"
+      "Media: 0.56796935, Desvio Padrao: 0.10310404\n",
+      "Intervalo de confiança (95%): [0.53107472,0.60486398]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.63333333, 0.3       , 0.5       , 0.6       , 0.56666667,\n",
-       "       0.53333333, 0.6       , 0.62068966, 0.51724138, 0.75862069,\n",
-       "       0.53333333, 0.43333333, 0.56666667, 0.56666667, 0.53333333,\n",
-       "       0.8       , 0.63333333, 0.5862069 , 0.62068966, 0.55172414,\n",
-       "       0.66666667, 0.73333333, 0.56666667, 0.76666667, 0.63333333,\n",
-       "       0.43333333, 0.6       , 0.48275862, 0.65517241, 0.55172414])"
+       "array([0.63333333, 0.26666667, 0.5       , 0.56666667, 0.6       ,\n",
+       "       0.56666667, 0.56666667, 0.62068966, 0.48275862, 0.65517241,\n",
+       "       0.6       , 0.46666667, 0.46666667, 0.46666667, 0.53333333,\n",
+       "       0.8       , 0.5       , 0.55172414, 0.62068966, 0.55172414,\n",
+       "       0.66666667, 0.7       , 0.6       , 0.8       , 0.56666667,\n",
+       "       0.43333333, 0.56666667, 0.51724138, 0.62068966, 0.55172414])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,8 +759,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "7f14da6c",
+   "execution_count": 40,
+   "id": "b42a7d6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,6 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.ensemble import VotingClassifier\n",
     "from sklearn.utils import check_random_state\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import GridSearchCV, cross_val_score, RepeatedStratifiedKFold\n",
@@ -778,19 +777,20 @@
     "from collections import Counter\n",
     "\n",
     "\n",
-    "class HeterogeneousPooling(BaseEstimator, ClassifierMixin):\n",
+    "class HeterogeneousPooling(BaseEstimator):\n",
     "    def __init__(self, n_samples=1):\n",
     "        self.n_samples = n_samples\n",
     "        self.classifiers = []\n",
-    "        \n",
+    "\n",
     "    def fit(self, X, y):\n",
-    "        self.classes_ = sorted(set(y), key=lambda x: y.tolist().count(x), reverse=True)\n",
+    "        class_counts = Counter(y)\n",
+    "        self.class_order_ = sorted(class_counts, key=class_counts.get, reverse=True)\n",
     "        random_state = 0\n",
-    "        \n",
+    "\n",
     "        dt = DecisionTreeClassifier()\n",
     "        nb = GaussianNB()\n",
     "        knn = KNeighborsClassifier()\n",
-    "        \n",
+    "\n",
     "        for i in range(self.n_samples):\n",
     "            if i == 0:\n",
     "                X_train = X\n",
@@ -799,10 +799,11 @@
     "                random_state += 1\n",
     "                X_train, y_train = resample(X, y, replace=True, random_state=random_state)\n",
     "\n",
+    "\n",
     "            clf_dt = dt.fit(X_train, y_train)\n",
     "            clf_nb = nb.fit(X_train, y_train)\n",
     "            clf_knn = knn.fit(X_train, y_train)\n",
-    "            \n",
+    "\n",
     "            self.classifiers.append(clf_dt)\n",
     "            self.classifiers.append(clf_nb)\n",
     "            self.classifiers.append(clf_knn)\n",
@@ -822,22 +823,46 @@
     "                if count == max_vote:\n",
     "                    if most_frequent_class is None:\n",
     "                        most_frequent_class = cls\n",
-    "                    elif self.classes_.index(cls) < self.classes_.index(most_frequent_class):\n",
+    "                    elif self.class_order_.index(cls) < self.class_order_.index(most_frequent_class):\n",
     "                        most_frequent_class = cls\n",
     "\n",
     "            final_predictions.append(most_frequent_class)\n",
     "\n",
-    "        return final_predictions"
+    "        return final_predictions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "79588e0b",
+   "execution_count": 41,
+   "id": "12e029ac",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media: 0.53804598, Desvio Padrao: 0.08850592\n",
+      "Intervalo de confiança (95%): [0.50637512,0.56971683]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.46666667, 0.26666667, 0.46666667, 0.56666667, 0.56666667,\n",
+       "       0.53333333, 0.46666667, 0.62068966, 0.51724138, 0.75862069,\n",
+       "       0.46666667, 0.46666667, 0.56666667, 0.53333333, 0.53333333,\n",
+       "       0.73333333, 0.4       , 0.51724138, 0.62068966, 0.55172414,\n",
+       "       0.6       , 0.53333333, 0.56666667, 0.6       , 0.56666667,\n",
+       "       0.5       , 0.5       , 0.55172414, 0.55172414, 0.55172414])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "parameters = {'heterogeneous__n_samples': [1, 3, 5, 7]}\n",
     "\n",
@@ -845,11 +870,11 @@
     "\n",
     "pipe = Pipeline([('scaler', StandardScaler()), ('heterogeneous', hp)])\n",
     "\n",
-    "clf = GridSearchCV(pipe, parameters, cv=4)\n",
+    "clf = GridSearchCV(pipe, parameters, scoring='accuracy', cv=4)\n",
     "\n",
     "rkf = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=36851234)\n",
     "\n",
-    "HP_scores = cross_val_score(clf, X, y, cv=rkf)\n",
+    "HP_scores = cross_val_score(clf, X, y, scoring='accuracy', cv=rkf)\n",
     "classification_report(HP_scores)\n",
     "HP_scores"
    ]
