mudando variáveis e adicionando relatório

--- a/Trab1_Igor_Wandermurem_Dummer.ipynb
+++ b/Trab1_Igor_Wandermurem_Dummer.ipynb
@@ -716,29 +716,29 @@
         "        # Realiza previsões utilizando todos os classificadores\n",
         "        predictions = np.column_stack([clf.predict(X) for clf in self.classifiers])\n",
         "\n",
-        "        final_predictions = []\n",
+        "        final_pred = []\n",
         "        # Para cada exemplo, combina as previsões dos classificadores\n",
         "        for i in range(predictions.shape[0]):\n",
         "            # Pega as previsões dos classificadores de um determinado i nos dados de teste\n",
         "            votes = predictions[i, :]\n",
         "\n",
         "            # Conta as ocorrências das previsões de cada classe\n",
-        "            vote_count = Counter(votes)\n",
-        "            max_vote = max(vote_count.values())\n",
+        "            count_votes = Counter(votes)\n",
+        "            max_vote = max(count_votes.values())\n",
         "\n",
-        "            most_frequent_class = None\n",
+        "            frequent = None\n",
         "            # Identifica a classe mais frequente entre as previsões\n",
-        "            for cls, count in vote_count.items():\n",
+        "            for cls, count in count_votes.items():\n",
         "                if count == max_vote:\n",
-        "                    if most_frequent_class is None:\n",
-        "                        most_frequent_class = cls\n",
-        "                    elif self.class_order_.index(cls) < self.class_order_.index(most_frequent_class):\n",
-        "                        most_frequent_class = cls\n",
+        "                    if frequent is None:\n",
+        "                        frequent = cls\n",
+        "                    elif self.class_order_.index(cls) < self.class_order_.index(frequent):\n",
+        "                        frequent = cls\n",
         "\n",
         "            # Armazena a classe mais frequente         \n",
-        "            final_predictions.append(most_frequent_class)\n",
+        "            final_pred.append(frequent)\n",
         "\n",
-        "        return final_predictions\n"
+        "        return final_pred\n"
       ]
     },
     {
